integ-tests/tests/snapshots/parser__bad_strings__unterminated.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated:1:7
  │
1 │ foo = "\
  │       ^ eof reached before string terminator


